# MAI-OOP-Labs

./: a.out
lab1/: README.md
lab1/src/: solution.cpp
lab1/tests/: unit_tests.cpp
lab2/: CMakeLists.txt  README.md
lab2/src/: main.cpp  solution.cpp  solution.h
lab2/tests/: unit_tests.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: figure.hpp  figure_vector.hpp  pentagon.hpp  romb.hpp  trapezium.hpp
lab3/src/: figure.cpp  figure_vector.cpp  pentagon.cpp  romb.cpp  trapezium.cpp
lab3/test/: unit.cpp
lab4/: readme.md
lab4/include/: figure.hpp  figure_vector.hpp  pentagon.hpp  point.hpp  romb.hpp  trapezium.hpp
lab4/src/: figure.cpp  figure_vector.cpp  pentagon.cpp  point.cpp  romb.cpp  trapezium.cpp
lab5/: CMakeLists.txt
lab5/include/: FixedBlockMemoryResource.hpp  ForwardList.hpp  ForwardList.tpp
lab5/src/: FixedBlockMemoryResource.cpp  main.cpp
lab5/tests/: tests.cpp
lab6/: CMakeLists.txt
lab6/src/: game.cpp  game.hpp  main.cpp  npc.hpp  observer.hpp  point.hpp
lab6/tests/: unit.cpp
lab7/: CMakeLists.txt
lab7/src/: entity.cpp  entity.hpp  game.cpp  game.hpp  main.cpp  npc.cpp  types.hpp
lab7/tests/: unit.cpp
